[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/pi.png" type="Texture" id=1]
[ext_resource path="res://assets/img/bstart.png" type="Texture" id=2]
[ext_resource path="res://assets/img/title.png" type="Texture" id=3]
[ext_resource path="res://scripts/main_scripts/Home.gd" type="Script" id=5]
[ext_resource path="res://assets/img/bcontinue.png" type="Texture" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="img" type="Node" parent="."]

[node name="titlepi" type="Sprite" parent="img"]
position = Vector2( 822, 233 )
scale = Vector2( 5, 6 )
texture = ExtResource( 1 )
vframes = 3
hframes = 3

[node name="title" type="Sprite" parent="img"]
position = Vector2( 640, 240 )
z_index = -1
texture = ExtResource( 3 )

[node name="bStart" type="Button" parent="."]
process_priority = 1
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 479.0
margin_top = 344.0
margin_right = 799.0
margin_bottom = 421.0
focus_mode = 1
action_mode = 0
enabled_focus_mode = 1
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="bStart"]
position = Vector2( 164.614, 38.2944 )
texture = ExtResource( 2 )

[node name="bContinue" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 439.0
margin_top = 464.0
margin_right = 850.0
margin_bottom = 541.0
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="bContinue"]
position = Vector2( 204.614, 38.2944 )
texture = ExtResource( 7 )
[connection signal="pressed" from="bStart" to="." method="_on_bStart_pressed"]
[connection signal="pressed" from="bContinue" to="." method="_on_bContinue_pressed"]
